--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "socket.io-client": "^4.0.1",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
@@ -28,6 +29,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "ngrok": "^4.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
