--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
-    "vue-socket.io": "^3.0.10",
-    "vuex": "^3.6.2"
+    "vue-server-renderer": "^2.6.12",
+    "vue-socket.io-extended": "^4.1.0",
+    "vuex": "^3.6.2",
+    "webpack-merge": "^5.7.3",
+    "webpack-node-externals": "^2.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
