Added 403 page for when live is rebuilding. I think these need to go in a different place though

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,3 +4,5 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /index.html [NC,L,QSA]
+
+ErrorDocument 403 /403.html
