--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,13 @@
 RewriteEngine on
 RewriteBase /
 
+RewriteCond %{HTTP_USER_AGENT} (googlebot|discordbot|bingbot|yahoo|duckduckbot|baiduspider|facebo) [NC]
+RewriteCond %{REQUEST_URI} !^/static/(.*)$
+RewriteRule ^(.*)$ /static/index.php [L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/static/(.*)$
 RewriteRule ^(.*)$ /index.html [NC,L,QSA]
 
 ErrorDocument 403 /403.html
