--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "socket.io-client": "^4.0.1",
     "spacetime": "^6.16.0",
+    "spacetime-informal": "^0.6.1",
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
