--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "socket.io-client": "^4.0.1",
     "spacetime": "^6.16.0",
