--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "marked": "^2.1.3",
     "socket.io-client": "^4.0.1",
     "spacetime": "^6.16.0",
     "spacetime-informal": "^0.6.1",
