--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,5 @@ STAFFAPPS_GUILD_ID=
 STAFFAPPS_CATEGORY_ID=
 STAFFAPPS_APPLICATION_CHANNEL_ID=
 CORS_VALID_DOMAINS=slmn.gg,localhost
+SLMNGG_LOGS_GUILD_ID=
+SLMNGG_LOGS_CHANNEL_ID=
