--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,13 @@
 {
   "name": "slmngg-server",
-  "version": "1.0.0",
+  "versone ion": "1.0.0",
   "description": "SLMN.GG Backend Server",
   "main": "index.js",
   "scripts": {
     "serve-server": "nodemon src/index.js"
   },
-  "repository": "git+https://github.com/slmnio/slmngg-server.git",
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/slmnio/slmngg-server/issues"
-  },
-  "homepage": "https://github.com/slmnio/slmngg-server#readme",
   "private": true,
   "devDependencies": {
-    "eslint": "^7.23.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
