--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.2.0",
     "vue-server-renderer": "^2.6.12",
     "vue-socket.io-extended": "^4.1.0",
+    "vue-youtube-embed": "^2.2.2",
     "vuex": "^3.6.2",
     "webpack-merge": "^5.7.3",
     "webpack-node-externals": "^2.5.2"
