--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
+    "sharp": "^0.30.1",
     "socket.io": "^4.0.1"
   }
 }
