--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "howler": "^2.2.3",
     "marked": "^2.1.3",
     "socket.io-client": "^4.0.1",
     "spacetime": "^6.16.0",
