--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/slmnio/slmngg-server#readme",
   "private": true,
+  "type": "module",
   "devDependencies": {
     "eslint": "^7.23.0",
     "nodemon": "^2.0.7"
@@ -24,7 +25,7 @@
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "discord.js": "v13",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
