--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "airtable": "^0.10.1",
+    "algoliasearch": "^4.14.2",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
