--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,15 @@
 AIRTABLE_KEY=
 AIRTABLE_APP=
+
 DISCORD_TOKEN=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
 STAFFAPPS_GUILD_ID=
 STAFFAPPS_CATEGORY_ID=
 STAFFAPPS_APPLICATION_CHANNEL_ID=
+
 CORS_VALID_DOMAINS=slmn.gg,localhost
+
 SLMNGG_LOGS_GUILD_ID=
 SLMNGG_LOGS_CHANNEL_ID=
