Start work on automatically managing predictions
Co-authored-by: Solomon Cammack <solomon@solomon.eu.com>

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,10 @@ DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
+TWITCH_REDIRECT_URI=
+
 STAFFAPPS_GUILD_ID=
 STAFFAPPS_CATEGORY_ID=
 STAFFAPPS_APPLICATION_CHANNEL_ID=
