--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@twurple/api": "^5.2.5",
+    "@twurple/auth": "^5.2.5",
     "airtable": "^0.10.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
