Update main domain function to use an env override

--- a/website/.env
+++ b/website/.env
@@ -1,2 +1,5 @@
 VUE_APP_DEPLOY_MODE=live
 VUE_APP_DATA_SERVER="https://data.slmn.gg"
+
+# VUE_APP_MAIN_DOMAIN="https://dev.slmn.gg"   # for auth returns
+# VUE_APP_MAIN_COOKIE_DOMAIN="dev.slmn.gg"    # no protocol or ports (for cookies)
