--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
-    "discord.js": "~13",
+    "discord.js": "^13.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
