--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.13.0",
     "@twurple/api": "^5.2.5",
     "@twurple/auth": "^5.2.5",
     "airtable": "^0.10.1",
@@ -28,6 +30,7 @@
     "discord.js": "^13.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
     "sharp": "^0.30.1",
