--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "howler": "^2.2.3",
     "jimp": "^0.16.1",
     "marked": "^2.1.3",
+    "notyf": "^3.10.0",
     "opus-decoder": "^0.5.3",
     "socket.io-client": "^4.0.1",
     "spacetime": "^6.16.0",
