--- a/website/package.json
+++ b/website/package.json
@@ -14,12 +14,13 @@
     "howler": "^2.2.3",
     "jimp": "^0.16.1",
     "marked": "^2.1.3",
-    "obs-websocket-js": "^5.0.2",
     "notyf": "^3.10.0",
+    "obs-websocket-js": "^5.0.2",
     "opus-decoder": "^0.5.3",
     "socket.io-client": "^4.0.1",
     "spacetime": "^6.16.0",
     "spacetime-informal": "^0.6.1",
+    "timesync": "^1.0.11",
     "vue": "^2.6.11",
     "vue-cookies": "^1.8.1",
     "vue-meta": "^2.4.0",
