Add replay codes to map inputs, update replay code display across the site, adjust copy text button to be pos:absolute

--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -34,6 +34,7 @@
         ],
         "no-multiple-empty-lines": ["warn", { "max": 2 }],
         "no-trailing-spaces": ["warn"],
-        "space-before-function-paren": "off"
+        "space-before-function-paren": "off",
+        "no-throw-literal": "off"
     }
 }
