Migrate from vue cli to vite

--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -9,8 +9,7 @@
     ],
     "parserOptions": {
         "ecmaVersion": 12,
-        "sourceType": "module",
-        "parser": "babel-eslint"
+        "sourceType": "module"
     },
     "rules": {
         "indent": [
