--- a/website/package.json
+++ b/website/package.json
@@ -38,7 +38,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "ngrok": "^4.0.1"
+    "eslint-plugin-vue": "^6.2.2"
   }
 }
