--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.23.1",
     "howler": "^2.2.3",
-    "jimp": "^0.16.1",
+    "image-js": "^0.35.3",
     "marked": "^2.1.3",
     "notyf": "^3.10.0",
     "obs-websocket-js": "^5.0.2",
@@ -33,13 +33,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.2.0",
-    "vite": "^4.1.1",
     "@vue/eslint-config-standard": "^5.1.2",
     "eslint": "^7.23.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2"
+    "eslint-plugin-vue": "^6.2.2",
+    "vite": "^4.1.1"
   }
 }
