--- a/website/.env
+++ b/website/.env
@@ -1,5 +1,6 @@
 VITE_DEPLOY_MODE=live
-VITE_DATA_SERVER="https://data.slmn.gg"
+# VITE_DATA_SERVER="https://data.slmn.gg"
+VITE_DATA_SERVER="http://localhost:8901"
 
 # VITE_MAIN_DOMAIN="https://dev.slmn.gg"   # for auth returns
 # VITE_MAIN_COOKIE_DOMAIN="dev.slmn.gg"    # no protocol or ports (for cookies)
