--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "SLMN.GG Backend Server",
   "main": "index.js",
   "scripts": {
-    "serve-server": "nodemon src/index.js"
+    "serve-server": "nodemon src/index.js",
+    "register-commands": "node src/discord/register-slash-commands.js"
   },
   "repository": "git+https://github.com/slmnio/slmngg-server.git",
   "author": "",
@@ -20,14 +21,14 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.13.0",
+    "@discordjs/voice": "^0.16.0",
     "@twurple/api": "^5.2.5",
     "@twurple/auth": "^5.2.5",
     "airtable": "^0.10.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
-    "discord.js": "^13.3.1",
+    "discord.js": "^14.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "libsodium-wrappers": "^0.7.10",
