--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.12.0-dev.1688904265-df40dcd.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "libsodium-wrappers": "^0.7.10",
