--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,7 @@
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-socket.io-extended": "^4.1.0",
+    "vue-tweet-embed": "^2.4.0",
     "vue-youtube-embed": "^2.2.2",
     "vuex": "^3.6.2"
   },
