--- a/website/package.json
+++ b/website/package.json
@@ -23,6 +23,7 @@
     "spacetime-informal": "^0.6.1",
     "timesync": "^1.0.11",
     "vue": "^2.7",
+    "vue-confetti": "^2.3.0",
     "vue-cookies": "^1.8.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
