Add env variable DISCORD_RUN_VOICE_BOTS to control if bots run

--- a/server/.env.example
+++ b/server/.env.example
@@ -20,3 +20,6 @@ CORS_VALID_DOMAINS=slmn.gg,localhost
 
 SLMNGG_LOGS_GUILD_ID=
 SLMNGG_LOGS_CHANNEL_ID=
+
+# Set if you want Discord voice bots to run
+DISCORD_RUN_VOICE_BOTS=
