--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,9 @@
     "serve-website": "yarn dev"
   },
   "dependencies": {
+    "@handsontable/vue": "^14.0.0",
     "bootstrap-vue": "^2.23.1",
+    "handsontable": "^14.0.0",
     "howler": "^2.2.3",
     "image-js": "^0.35.3",
     "marked": "^2.1.3",
