--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "serve-website": "yarn dev"
   },
   "dependencies": {
+    "@vue/compat": "^3.1.0",
     "bootstrap-vue": "^2.23.1",
     "howler": "^2.2.3",
     "image-js": "^0.35.3",
@@ -22,18 +23,19 @@
     "spacetime": "^7.4.1",
     "spacetime-informal": "^0.6.1",
     "timesync": "^1.0.11",
-    "vue": "^2.7",
+    "vue": "^3.1.0",
     "vue-confetti": "^2.3.0",
     "vue-cookies": "^1.8.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
-    "vue-socket.io-extended": "^4.1.0",
+    "vue-socket.io-extended": "^5.0.0-alpha.5",
     "vue-tweet-embed": "^2.4.0",
     "vue-youtube-embed": "^2.2.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/compiler-sfc": "^3.4.15",
     "@vue/eslint-config-standard": "^5.1.2",
     "eslint": "^7.23.0",
     "eslint-plugin-import": "^2.20.2",
@@ -41,6 +43,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "vite": "^4.1.1"
+    "vite": "^5.0.12"
   }
 }
