--- a/website/package.json
+++ b/website/package.json
@@ -27,16 +27,17 @@
     "vue-confetti": "^2.3.0",
     "vue-cookies": "^1.8.1",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.2.0",
+    "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^5.0.0-alpha.5",
     "vue-tweet-embed": "^2.4.0",
     "vue-youtube-embed": "^2.2.2",
-    "vuex": "^3.6.2"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/compiler-sfc": "^3.4.15",
     "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/tsconfig": "^0.5.1",
     "eslint": "^7.23.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
