--- a/website/package.json
+++ b/website/package.json
@@ -11,9 +11,12 @@
     "serve-website": "yarn dev"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "bootstrap-vue": "^2.23.1",
     "howler": "^2.2.3",
     "image-js": "^0.35.3",
+    "ini": "^4.1.2",
+    "lodash": "^4.17.21",
     "marked": "^2.1.3",
     "notyf": "^3.10.0",
     "obs-websocket-js": "^5.0.2",
