--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@vue/compat": "^3.1.0",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-next": "^0.17.2",
     "howler": "^2.2.3",
     "image-js": "^0.35.3",
     "marked": "^2.1.3",
@@ -44,6 +45,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.12"
   }
 }
