--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "serve-website": "yarn dev"
   },
   "dependencies": {
+    "@unhead/vue": "^1.9.7",
     "@vue/compat": "^3.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.17.2",
@@ -28,8 +29,7 @@
     "timesync": "^1.0.11",
     "vue": "^3.1.0",
     "vue-confetti": "^2.3.0",
-    "vue-cookies": "^1.8.1",
-    "vue-meta": "^2.4.0",
+    "vue-cookies": "^1.8.4",
     "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^5.0.0-alpha.5",
     "vue-tweet-embed": "^2.4.0",
