--- a/website/package.json
+++ b/website/package.json
@@ -32,21 +32,21 @@
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.3.2",
     "vue-socket.io-extended": "^5.0.0-alpha.5",
-    "vue-tweet-embed": "^2.4.0",
-    "vue-youtube-embed": "^2.2.2",
+    "vue-tweet": "^2.2.1",
+    "youtube-vue3": "^0.1.15",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/compiler-sfc": "^3.4.15",
-    "@vue/eslint-config-standard": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/compiler-sfc": "^3.4.24",
+    "@vue/eslint-config-standard": "^8.0.1",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^7.23.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint": "^9.1.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^9.25.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.12"
   }
