--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
+    "discord-api-types": "^0.37.79",
     "discord.js": "^14.12.0-dev.1688904265-df40dcd.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
