--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite --port 8080",
+    "dev": "vite --port 8080 --host",
     "build": "vite build",
     "serve": "vite preview --port 8080",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
@@ -15,12 +15,12 @@
     "@vue/compat": "^3.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.17.2",
-    "howler": "^2.2.3",
+    "howler": "^2.2.4",
     "image-js": "^0.35.3",
     "marked": "^12.0.2",
     "notyf": "^3.10.0",
     "obs-websocket-js": "^5.0.2",
-    "opus-decoder": "^0.5.3",
+    "opus-decoder": "^0.7.6",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "socket.io-client": "^4.0.1",
@@ -33,20 +33,17 @@
     "vue-router": "^4.3.2",
     "vue-socket.io-extended": "^5.0.0-alpha.5",
     "vue-tweet": "^2.2.1",
-    "youtube-vue3": "^0.1.15",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "youtube-vue3": "^0.1.15"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.10.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/compiler-sfc": "^3.4.24",
     "@vue/eslint-config-standard": "^8.0.1",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^9.1.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.25.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.12"
   }
