Sending it (unfinished dashboard typescript changes)
Co-authored-by: Solomon Cammack <solomon@solomon.eu.com>

--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite --port 8080",
+    "dev": "vite --port 8080 --host",
     "build": "vite build",
     "serve": "vite preview --port 8080",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
@@ -26,6 +26,7 @@
     "spacetime": "^7.4.1",
     "spacetime-informal": "^0.6.1",
     "timesync": "^1.0.11",
+    "typescript": "^5.4.5",
     "vue": "^3.4.25",
     "vue-confetti": "^2.3.0",
     "vue-cookies": "^1.8.4",
@@ -38,7 +39,7 @@
     "@rushstack/eslint-patch": "^1.10.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/compiler-sfc": "^3.4.24",
-    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-standard-with-typescript": "^8.0.0",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
