--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,6 +18,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - run: ls -la
     - run: cd ${{ matrix.folder }}
     - name: Use Node.js 18.20.2
       uses: actions/setup-node@v3
