--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,13 +15,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: ls -la
-    - run: cd ${{ matrix.folder }}
     - name: Use Node.js 18.20.2
       uses: actions/setup-node@v3
       with:
         node-version: 18.20.2
         cache: 'yarn'
+        cache-dependency-path: ./${{ matrix.folder }}/yarn.lock
 
     - name: "${{ matrix.folder }}: install"
       run: yarn install --immutable --immutable-cache --check-cache
