--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "serve-server": "nodemon src/index.js",
-    "register-commands": "node src/discord/register-slash-commands.js"
+    "register-commands": "node src/discord/register-slash-commands.js",
+    "lint": "eslint --ext .js,.ts --ignore-path .gitignore --ignore-pattern \"_deprecated/*\" --fix src --quiet",
+    "build": "echo \"No build stage for server - skipping\""
   },
   "repository": "git+https://github.com/slmnio/slmngg-server.git",
   "author": "",
