--- a/website/package.json
+++ b/website/package.json
@@ -43,6 +43,7 @@
     "@vue/compiler-sfc": "^3.4.24",
     "@vue/tsconfig": "^0.5.1",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vue-tsc": "^2.0.16"
   }
 }
