--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@unhead/vue": "^1.9.7",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/router": "^10.9.0",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.17.2",
     "howler": "^2.2.4",
