--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "build": "echo \"No build stage for server - skipping\""
   },
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.17.0",
