--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,13 @@
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "h3": "^1.11.1",
     "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
     "sharp": "^0.30.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "unstorage": "^1.10.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
