Play around with using unstorage

--- a/server/.env.example
+++ b/server/.env.example
@@ -23,3 +23,7 @@ SLMNGG_LOGS_CHANNEL_ID=
 
 # Set if you want Discord voice bots to run
 DISCORD_RUN_VOICE_BOTS=
+# Set to true to disable antileak locally
+DISABLE_ANTILEAK=
+# Set to true so that the dataserver doesn't have to rebuild after every restart
+PERSIST_DATA=
