--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
     "sharp": "^0.30.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "unstorage": "^1.10.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
