--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
     "dev": "vite --port 8080 --host",
     "build": "vite build",
     "serve": "vite preview --port 8080",
-    "lint": "eslint --fix src",
+    "lint": "eslint -c ../eslint.config.mjs --fix src",
     "build-stage": "vite build --mode staging",
     "serve-website": "pnpm dev"
   },
@@ -45,6 +45,8 @@
     "@vue/tsconfig": "^0.5.1",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.11",
-    "vue-tsc": "^2.0.16"
+    "vue-tsc": "^2.0.16",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0"
   }
 }
