--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "libsodium-wrappers": "^0.7.10",
+    "livekit-server-sdk": "^2.5.1",
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
     "sharp": "^0.33.4",
