--- a/website/package.json
+++ b/website/package.json
@@ -10,43 +10,45 @@
     "serve-website": "pnpm dev"
   },
   "dependencies": {
-    "@unhead/vue": "^1.9.7",
-    "@vueuse/core": "^10.9.0",
-    "@vueuse/router": "^10.9.0",
+    "@unhead/vue": "^1.9.15",
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/router": "^10.11.0",
     "bootstrap": "^5.3.3",
-    "bootstrap-vue-next": "^0.17.6",
+    "bootstrap-vue-next": "^0.22.7",
     "howler": "^2.2.4",
-    "image-js": "^0.35.3",
-    "ini": "^4.1.2",
+    "image-js": "^0.35.6",
+    "ini": "^4.1.3",
+    "livekit-client": "^2.3.1",
     "lodash": "^4.17.21",
-    "marked": "^12.0.2",
+    "marked": "^13.0.2",
     "notyf": "^3.10.0",
-    "obs-websocket-js": "^5.0.2",
+    "obs-websocket-js": "^5.0.5",
     "opus-decoder": "^0.7.6",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "socket.io-client": "^4.0.1",
-    "spacetime": "^7.4.1",
+    "socket.io-client": "^4.7.5",
+    "spacetime": "^7.6.0",
     "spacetime-informal": "^0.6.1",
     "timesync": "^1.0.11",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.3",
     "universal-cookie": "^7.1.4",
-    "vue": "^3.4.25",
+    "vue": "^3.4.31",
     "vue-confetti": "^2.3.0",
-    "vue-router": "^4.3.2",
+    "vue-router": "^4.4.0",
     "vuex": "^4.1.0",
     "youtube-vue3": "^0.1.15"
   },
   "devDependencies": {
-    "@types/ini": "^4.1.0",
-    "@types/lodash": "^4.17.1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/compiler-sfc": "^3.4.24",
+    "@types/ini": "^4.1.1",
+    "@types/lodash": "^4.17.6",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/compiler-sfc": "^3.4.31",
     "@vue/tsconfig": "^0.5.1",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.11",
-    "vue-tsc": "^2.0.16",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0"
+    "eslint-plugin-vue": "^9.27.0",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "^5.3.3",
+    "vite-plugin-vue-devtools": "^7.3.5",
+    "vue-tsc": "^2.0.26"
   }
 }
