--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "@vueuse/router": "^10.9.0",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.17.6",
+    "client-zip": "^2.4.5",
     "howler": "^2.2.4",
     "image-js": "^0.35.3",
     "ini": "^4.1.2",
@@ -43,10 +44,10 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/compiler-sfc": "^3.4.24",
     "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.11",
-    "vue-tsc": "^2.0.16",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0"
+    "vue-tsc": "^2.0.16"
   }
 }
