--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "private": true,
   "scripts": {
-    "serve-server": "nodemon src/index.js",
+    "serve-server": "tsx watch src/index.js",
     "register-commands": "node src/discord/register-slash-commands.js",
     "lint": "eslint --fix src",
     "build": "echo \"No build stage for server - skipping\""
@@ -29,6 +29,8 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@types/node": "^22.5.5",
+    "nodemon": "^3.1.0",
+    "tsx": "^4.19.1"
   }
 }
