--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
         "module": "ES2022",
         "moduleResolution": "node",
         "target": "ES2022",
-        "strict": true
+        "strict": true,
+        "allowJs": true
     }
 }
