--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "outDir": "./dist",
         "allowSyntheticDefaultImports": true,
         "lib": ["ES2022"],
         "module": "ES2022",
@@ -7,5 +8,12 @@
         "target": "ES2022",
         "strict": true,
         "allowJs": true
-    }
+    },
+    "include": [
+        "./**/*"
+    ],
+    "exclude": [
+        "./dist/**/*",
+        "./src/_deprecated/**/*"
+    ]
 }
