--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,8 @@
         "moduleResolution": "node",
         "target": "ES2022",
         "strict": true,
-        "allowJs": true
+        "allowJs": true,
+        "skipLibCheck": true
     },
     "include": [
         "./**/*"
