--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "discord-api-types": "^0.37.79",
-    "discord.js": "^14.15.2",
+    "discord.js": "14.17.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "libsodium-wrappers": "^0.7.10",
