--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.0",
     "tsx": "^4.19.1"
   }
