--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.0",
     "tsx": "^4.19.1"
