--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
     "sharp": "^0.33.4",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "shared": "workspace:^"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
