--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "typescript-eslint": "^8.48.1",
     "@vue/language-server": "^3.1.7"
   },
-  "packageManager": "pnpm@9.1.0"
+  "packageManager": "pnpm@9.1.0",
+  "engines": {
+    "node": "^24.11.1"
+  }
 }
