--- a/server/package.json
+++ b/server/package.json
@@ -10,29 +10,27 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.17.0",
-    "@twurple/api": "^7.1.0",
-    "@twurple/auth": "^7.1.0",
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.19.0",
+    "@twurple/api": "^8.0.2",
+    "@twurple/auth": "^8.0.2",
     "airtable": "^0.12.2",
-    "body-parser": "^1.20.2",
+    "body-parser": "^2.2.1",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
-    "discord-api-types": "^0.37.79",
-    "discord.js": "14.17.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "discord-api-types": "^0.38.36",
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3",
+    "express": "^4.22.1",
     "libsodium-wrappers": "^0.7.10",
-    "node-fetch": "^2.6.1",
-    "ora": "^5.4.0",
-    "sharp": "^0.33.4",
+    "sharp": "^0.34.5",
     "socket.io": "^4.7.5",
     "shared": "workspace:^"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.5.5",
+    "@types/express": "^4.17.25",
+    "@types/node": "^24.10.1",
     "nodemon": "^3.1.0",
     "tsx": "^4.19.1"
   }
