--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
     "serve-server": "tsx watch src/index.js",
     "register-commands": "tsx src/discord/register-slash-commands.js",
     "lint": "eslint --fix src",
-    "build": "tsc"
+    "build": "tsc",
+    "run": "node dist/index.js",
+    "run-tsx": "tsx src/index.js"
   },
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.17.0",
+    "@discordjs/voice": "^0.19.0",
     "@twurple/api": "^7.1.0",
     "@twurple/auth": "^7.1.0",
     "airtable": "^0.12.2",
@@ -27,13 +28,14 @@
     "ora": "^5.4.0",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
-    "shared": "workspace:^"
+    "shared": "file:../shared"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.0",
-    "tsx": "^4.19.1"
+    "tsx": "^4.19.1",
+    "@mapbox/node-pre-gyp": "^2.0.3"
   }
 }
