--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "serve-server": "tsx watch src/index.js",
     "register-commands": "tsx src/discord/register-slash-commands.js",
     "lint": "eslint --fix src",
-    "build": "tsc",
+    "build": "tsc --build",
     "run": "node dist/index.js",
     "run-tsx": "tsx src/index.js"
   },
