--- a/server/package.json
+++ b/server/package.json
@@ -26,16 +26,17 @@
     "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2.6.1",
     "ora": "^5.4.0",
+    "shared": "file:../shared",
     "sharp": "^0.33.4",
-    "socket.io": "^4.7.5",
-    "shared": "file:../shared"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@mapbox/node-pre-gyp": "^2.0.3",
+    "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.0",
-    "tsx": "^4.19.1",
-    "@mapbox/node-pre-gyp": "^2.0.3"
+    "tsx": "^4.19.1"
   }
 }
